--- a/interview_d.htm
+++ b/interview_d.htm
@@ -66,7 +66,7 @@
       <!-- HEADER -->
       <header class="header">
         <div class="header__wrap">
-          <div class="logo">
+          <h1 class="logo">
             <a href="index.htm" class="link">
               <div class="img">
                 <span class="img-box">
@@ -78,7 +78,7 @@
                 </span>
               </div>
             </a>
-          </div>
+          </h1>
           <div class="nav">
             <ul class="nav__list">
               <li class="nav__list__item">
@@ -245,7 +245,7 @@
               <div class="features__inner innerWrap">
                 <div class="head anime -slideIn-b-40">
                   <p class="ttl">
-                    児童デイサービス アップル（合同会社アリスタッチ）の<br class="u-pcOnly"><span class="c-blue">特</span><span class="c-lightblue">徴</span>は何だと思いますか？
+                    児童デイサービス アップル<br class="u-spOnly">（合同会社アリスタッチ）の<br class="u-pcOnly"><span class="c-blue">特</span><span class="c-lightblue">徴</span>は何だと思いますか？
                   </p>
                 </div>
                 <div class="body">
