--- a/interview_d.htm
+++ b/interview_d.htm
@@ -245,7 +245,7 @@
               <div class="features__inner innerWrap">
                 <div class="head anime -slideIn-b-40">
                   <p class="ttl">
-                    児童デイサービス アップル<br class="u-spOnly">（合同会社アリスタッチ）の<br class="u-pcOnly"><span class="c-blue">特</span><span class="c-lightblue">徴</span>は何だと思いますか？
+                    児童デイサービス アップル<br class="u-spOnly">（合同会社アリスタッチ）の<br><span class="c-blue">特</span><span class="c-lightblue">徴</span>は何だと思いますか？
                   </p>
                 </div>
                 <div class="body">
