--- a/index.htm
+++ b/index.htm
@@ -337,7 +337,7 @@
               </ul>
               <div class="btn-box anime">
                 <div class="arrow-btn">
-                  <a class="link" href="kyujin_l.htm">一覧を見る</a>
+                  <a class="link" href="information_l.htm">一覧を見る</a>
                 </div>
               </div>
               <div class="bubble01">
