--- a/index.htm
+++ b/index.htm
@@ -361,7 +361,7 @@
               </p>
               <div class="btn-box anime">
                 <div class="arrow-btn">
-                  <a class="link" href="kyujin_l.htm">詳細を見る</a>
+                  <a class="link" href="facility_l.htm">詳細を見る</a>
                 </div>
               </div>
             </div>
