--- a/interview_ajax.htm
+++ b/interview_ajax.htm
@@ -77,7 +77,7 @@
       </div>
       <div class="btn-box anime">
         <div class="arrow-btn">
-          <a class="link" href="kyujin_l.htm">一覧を見る</a>
+          <a class="link" href="interview_l.htm">一覧を見る</a>
         </div>
       </div>
     </div>
