--- a/facility_l.htm
+++ b/facility_l.htm
@@ -84,7 +84,7 @@
                 <a class="link" href="information_l.htm">お知らせ</a>
               </li>
               <li class="nav__list__item">
-                <a class="link" href="facility.htm">事業所案内</a>
+                <a class="link" href="facility_l.htm">事業所案内</a>
               </li>
               <li class="nav__list__item">
                 <a class="link" href="service.htm">放課後等デイサービス</a>
@@ -130,7 +130,7 @@
                   <a class="link" href="information_l.htm">お知らせ</a>
                 </li>
                 <li class="pages__list__item">
-                  <a class="link" href="facility.htm">事業所案内</a>
+                  <a class="link" href="facility_l.htm">事業所案内</a>
                 </li>
                 <li class="pages__list__item">
                   <a class="link" href="service.htm">放課後等デイサービス</a>
@@ -216,8 +216,13 @@
 				<!-- CONTENTS -->
         <div class="facility">
           <div class="facility__inner innerWrap">
+            <div class="bubble01">
+              <span class="img-box">
+                <img class="ofi" src="img/common/i_bubble.png" alt="装飾">
+              </span>
+            </div>
             <ul class="facility__list">
-              <li class="facility__list__item">
+              <li class="facility__list__item anime">
                 <a class="link" href="facility_d.htm">
                   <span class="num eng">1</span>
                   <div class="link__wrap">
@@ -236,7 +241,7 @@
                   </div>
                 </a>
               </li>
-              <li class="facility__list__item">
+              <li class="facility__list__item anime">
                 <a class="link" href="facility_d.htm">
                   <span class="num eng">2</span>
                   <div class="link__wrap">
@@ -255,7 +260,7 @@
                   </div>
                 </a>
               </li>
-              <li class="facility__list__item">
+              <li class="facility__list__item anime">
                 <a class="link" href="facility_d.htm">
                   <span class="num eng">3</span>
                   <div class="link__wrap">
@@ -411,7 +416,7 @@
                   <a class="link" href="information_l.htm">お知らせ</a>
                 </li>
                 <li class="pages__list__item">
-                  <a class="link" href="facility.htm">事業所案内</a>
+                  <a class="link" href="facility_l.htm">事業所案内</a>
                 </li>
                 <li class="pages__list__item">
                   <a class="link" href="service.htm">放課後等デイサービス</a>
