--- a/interview_d.htm
+++ b/interview_d.htm
@@ -85,7 +85,7 @@
                 <a class="link" href="information_l.htm">お知らせ</a>
               </li>
               <li class="nav__list__item">
-                <a class="link" href="facility.htm">事業所案内</a>
+                <a class="link" href="facility_l.htm">事業所案内</a>
               </li>
               <li class="nav__list__item">
                 <a class="link" href="service.htm">放課後等デイサービス</a>
@@ -131,7 +131,7 @@
                   <a class="link" href="information_l.htm">お知らせ</a>
                 </li>
                 <li class="pages__list__item">
-                  <a class="link" href="facility.htm">事業所案内</a>
+                  <a class="link" href="facility_l.htm">事業所案内</a>
                 </li>
                 <li class="pages__list__item">
                   <a class="link" href="service.htm">放課後等デイサービス</a>
@@ -275,7 +275,7 @@
             <section class="sec__interview">
               <div class="interview__inner innerWrap">
                 <div class="head">
-                  <div class="sec-ttl01 -center">
+                  <div class="sec-ttl01 -center -firstLetterBlue">
                     <span class="en split anime -for-boundIn-b-40">INTERVIEW</span>
                     <h2 class="ja split anime -for-boundIn-b-40">インタビュー</h2>
                   </div>
@@ -606,7 +606,7 @@
                   <a class="link" href="information_l.htm">お知らせ</a>
                 </li>
                 <li class="pages__list__item">
-                  <a class="link" href="facility.htm">事業所案内</a>
+                  <a class="link" href="facility_l.htm">事業所案内</a>
                 </li>
                 <li class="pages__list__item">
                   <a class="link" href="service.htm">放課後等デイサービス</a>
