--- a/interview_l.htm
+++ b/interview_l.htm
@@ -84,7 +84,7 @@
                 <a class="link" href="information_l.htm">お知らせ</a>
               </li>
               <li class="nav__list__item">
-                <a class="link" href="facility.htm">事業所案内</a>
+                <a class="link" href="facility_l.htm">事業所案内</a>
               </li>
               <li class="nav__list__item">
                 <a class="link" href="service.htm">放課後等デイサービス</a>
@@ -130,7 +130,7 @@
                   <a class="link" href="information_l.htm">お知らせ</a>
                 </li>
                 <li class="pages__list__item">
-                  <a class="link" href="facility.htm">事業所案内</a>
+                  <a class="link" href="facility_l.htm">事業所案内</a>
                 </li>
                 <li class="pages__list__item">
                   <a class="link" href="service.htm">放課後等デイサービス</a>
@@ -451,7 +451,7 @@
                   <a class="link" href="information_l.htm">お知らせ</a>
                 </li>
                 <li class="pages__list__item">
-                  <a class="link" href="facility.htm">事業所案内</a>
+                  <a class="link" href="facility_l.htm">事業所案内</a>
                 </li>
                 <li class="pages__list__item">
                   <a class="link" href="service.htm">放課後等デイサービス</a>
