--- a/kyujin_d.htm
+++ b/kyujin_d.htm
@@ -85,7 +85,7 @@
                 <a class="link" href="information_l.htm">お知らせ</a>
               </li>
               <li class="nav__list__item">
-                <a class="link" href="facility.htm">事業所案内</a>
+                <a class="link" href="facility_l.htm">事業所案内</a>
               </li>
               <li class="nav__list__item">
                 <a class="link" href="service.htm">放課後等デイサービス</a>
@@ -131,7 +131,7 @@
                   <a class="link" href="information_l.htm">お知らせ</a>
                 </li>
                 <li class="pages__list__item">
-                  <a class="link" href="facility.htm">事業所案内</a>
+                  <a class="link" href="facility_l.htm">事業所案内</a>
                 </li>
                 <li class="pages__list__item">
                   <a class="link" href="service.htm">放課後等デイサービス</a>
@@ -737,7 +737,7 @@
                   <a class="link" href="information_l.htm">お知らせ</a>
                 </li>
                 <li class="pages__list__item">
-                  <a class="link" href="facility.htm">事業所案内</a>
+                  <a class="link" href="facility_l.htm">事業所案内</a>
                 </li>
                 <li class="pages__list__item">
                   <a class="link" href="service.htm">放課後等デイサービス</a>
