--- a/daycare.htm
+++ b/daycare.htm
@@ -87,7 +87,7 @@
                 <a class="link" href="facility_l.htm">事業所案内</a>
               </li>
               <li class="nav__list__item">
-                <a class="link" href="service.htm">放課後等デイサービス</a>
+                <a class="link" href="daycare.htm">放課後等デイサービス</a>
               </li>
               <li class="nav__list__item">
                 <a class="link" href="data.htm">データで見るアリスタッチ</a>
@@ -133,7 +133,7 @@
                   <a class="link" href="facility_l.htm">事業所案内</a>
                 </li>
                 <li class="pages__list__item">
-                  <a class="link" href="service.htm">放課後等デイサービス</a>
+                  <a class="link" href="daycare.htm">放課後等デイサービス</a>
                 </li>
                 <li class="pages__list__item">
                   <a class="link" href="data.htm">データで見るアリスタッチ</a>
@@ -215,7 +215,259 @@
 
 				<!-- CONTENTS -->
         <div class="daycare">
-          <div class="daycare__inner">
+          <div class="daycare__inner innerWrap">
+            <div class="bubble01">
+              <span class="img-box">
+                <img class="ofi" src="img/common/i_bubble.png" alt="装飾">
+              </span>
+            </div>
+
+            <!-- 放課後デイサービスについて -->
+            <section class="sec__about">
+              <div class="about">
+                <div class="about__head">
+                  <div class="sec-ttl01 -center -firstLetterBlue">
+                    <span class="en split anime -for-boundIn-b-40">ABOUT</span>
+                    <h2 class="ja split anime -for-boundIn-b-40">放課後デイサービスについて</h2>
+                  </div>
+                </div>
+                <div class="about__body">
+                  <div class="img-holder">
+                    <div class="img img-01">
+                      <img src="img/daycare/input/about01.jpg" alt="イメージ" class="ofi" loading="lazy">
+                    </div>
+                    <div class="img img-02">
+                      <img src="img/daycare/input/about02.jpg" alt="イメージ" class="ofi" loading="lazy">
+                    </div>
+                    <div class="img img-03">
+                      <img src="img/daycare/input/about03.jpg" alt="イメージ" class="ofi" loading="lazy">
+                    </div>
+                  </div>
+                  <div class="txt-holder">
+                    <p class="description">
+                      放課後等デイサービスは、児童福祉法を根拠にした福祉サービスで、発達のゆるやかな就学児童を対象に療育や居場所づくりを行います。私たちアリスタッチグループは「アップル」と「アップル上汐」という2つの事業所で放課後等デイサービスを提供。放課後や夏休み等の長期休暇中の個別療育や集団活動を通して心身における生活能力を育成し、子どもたちが「ありのままの自分」に自信を持てるようにサポートします。
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </section>
+
+            <!-- アップル・アップル上汐の特徴 -->
+            <section class="sec__feature">
+              <div class="feature">
+                <div class="feature__head">
+                  <div class="sec-ttl01 -center -firstLetterBlue">
+                    <span class="en split anime -for-boundIn-b-40">FEATURE</span>
+                    <h2 class="ja split anime -for-boundIn-b-40">アップル・アップル上汐の特徴</h2>
+                  </div>
+                </div>
+                <div class="feature__body">
+                  <ul class="feature__list">
+                    <li class="feature__list__item">
+                      <div class="img-holder">
+                        <div class="img">
+                          <img src="img/daycare/input/feature01.jpg" alt="イメージ" class="ofi" loading="lazy">
+                        </div>
+                      </div>
+                      <div class="txt-holder">
+                        <div class="term-holder">
+                          <span class="num eng">1</span>
+                          <p class="term">療育方針～あえて療育方針を定めない～</p>
+                        </div>
+                        <div class="desc-holder">
+                          <p class="desc">
+                            近年、放課後等デイサービスへのニーズが高まっており、何かの療育に力を入れている放課後等デイサービスも少なくありません。私たちアップルは、あえて特化した療育方針を持たず、子ども一人ひとりの特性に合わせて、保護者の方とコミュニケーションを密に、相談しながら療育方針を決めていきます。
+                          </p>
+                        </div>
+                      </div>
+                    </li>
+                    <li class="feature__list__item">
+                      <div class="img-holder">
+                        <div class="img">
+                          <img src="img/daycare/input/feature02.jpg" alt="イメージ" class="ofi" loading="lazy">
+                        </div>
+                      </div>
+                      <div class="txt-holder">
+                        <div class="term-holder">
+                          <span class="num eng">2</span>
+                          <p class="term">モットー～ご機嫌な毎日を、みんなへ～</p>
+                        </div>
+                        <div class="desc-holder">
+                          <p class="desc">
+                            「ご機嫌な毎日を過ごす」というのがアップルのモットーです。放課後等デイサービスは、子どもが楽しく過ごすためのものであるのと同時に保護者の方の負担を少しでも軽減するためのものでもあります。子どもたちも、お父さんも、お母さんも、みんなハッピーになる、みんな機嫌よく毎日過ごせるお手伝い。それがアップルの願いです。
+
+                          </p>
+                        </div>
+                      </div>
+                    </li>
+                    <li class="feature__list__item">
+                      <div class="img-holder">
+                        <div class="img">
+                          <img src="img/daycare/input/feature03.jpg" alt="イメージ" class="ofi" loading="lazy">
+                        </div>
+                      </div>
+                      <div class="txt-holder">
+                        <div class="term-holder">
+                          <span class="num eng">3</span>
+                          <p class="term">職場環境～明るく楽しい雰囲気づくり～</p>
+                        </div>
+                        <div class="desc-holder">
+                          <p class="desc">
+                            入社前に必ず職場見学へお越しいただいています。入社直後の退職はお互いにとって不幸です。少しでもミスマッチを防げるよう、事前にアップルの雰囲気を直接肌で感じ、知っていただきたいと考えています。明るい人柄の社長イズムが浸透している「明るく楽しくやりましょう！」という雰囲気を気に入っていただけるとうれしいです。
+                          </p>
+                        </div>
+                      </div>
+                    </li>
+                    <li class="feature__list__item">
+                      <div class="img-holder">
+                        <div class="img">
+                          <img src="img/daycare/input/feature04.jpg" alt="イメージ" class="ofi" loading="lazy">
+                        </div>
+                      </div>
+                      <div class="txt-holder">
+                        <div class="term-holder">
+                          <span class="num eng">4</span>
+                          <p class="term">スタッフ～志高く子ども好きな人ばかり～</p>
+                        </div>
+                        <div class="desc-holder">
+                          <p class="desc">
+                            スタッフは、社員、大学生アルバイト、パートスタッフで構成されています。大学生スタッフは、将来先生になりたい人や子どもと関わる仕事がしたい人、パートスタッフは、お世話好きな人が多いです。仕事の話はもちろん、プライベートの話まで何でも話せるほどスタッフ同士の仲は良好。明るく、子どもが好きなスタッフがそろっています。
+                          </p>
+                        </div>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </section>
+
+            <!-- 自己評価 -->
+            <section class="sec__assessment">
+              <div class="assessment">
+                <div class="assessment__head">
+                  <div class="sec-ttl01 -center -firstLetterBlue">
+                    <span class="en split anime -for-boundIn-b-40">SELF-ASSESSMENT</span>
+                    <h2 class="ja split anime -for-boundIn-b-40">自己評価</h2>
+                  </div>
+                </div>
+                <div class="assessment__body">
+                  <div class="assessment__body__inner">
+                    <dl class="assessment__list">
+                      <dt class="term">
+                        児童発達支援事業所における自己評価結果（公表）
+                      </dt>
+                      <dd class="desc">
+                        <a href="#" target="_blank">上汐-児童発達支援自己評価表 （公表用）</a>
+                      </dd>
+                      <dd class="desc">
+                        <a href="#" target="_blank">天王寺-児童発達支援自己評価表 （公表用）</a>
+                      </dd>
+                    </dl>
+                    <dl class="assessment__list">
+                      <dt class="term">
+                        保護者等からの児童発達支援事業所評価の集計結果（公表）
+                      </dt>
+                      <dd class="desc">
+                        <a href="#" target="_blank">上汐-児童発達支援集計結果（公表）</a>
+                      </dd>
+                      <dd class="desc">
+                        <a href="#" target="_blank">天王寺-児童発達支援集計結果（公表）</a>
+                      </dd>
+                    </dl>
+                    <dl class="assessment__list">
+                      <dt class="term">
+                        放課後等デイサービス事業所における自己評価結果（公表）
+                      </dt>
+                      <dd class="desc">
+                        <a href="#" target="_blank">上汐-放デイガイドライン自己評価表</a>
+                      </dd>
+                      <dd class="desc">
+                        <a href="#" target="_blank">天王寺-放デイガイドライン自己評価表</a>
+                      </dd>
+                    </dl>
+                    <dl class="assessment__list">
+                      <dt class="term">
+                        保護者等からの放課後等デイサービス事業所評価の集計結果（公表）
+                      </dt>
+                      <dd class="desc">
+                        <a href="#" target="_blank">上汐-ガイドライン保護者向け評価表</a>
+                      </dd>
+                      <dd class="desc">
+                        <a href="#" target="_blank">天王寺-ガイドライン保護者向け評価表</a>
+                      </dd>
+                    </dl>
+                  </div>
+                </div>
+              </div>
+            </section>
+
+            <!-- 事業所案内 -->
+            <section class="sec__outline">
+              <div class="outline">
+                <div class="outline__head">
+                  <div class="sec-ttl01 -center -firstLetterBlue">
+                    <span class="en split anime -for-boundIn-b-40">OUTLINE</span>
+                    <h2 class="ja split anime -for-boundIn-b-40">事業所案内</h2>
+                  </div>
+                </div>
+                <div class="outline__body">
+                  <ul class="outline__list">
+                    <li class="outline__list__item">
+                      <div class="txt-holder">
+                        <div class="name">
+                          <span class="name__sub">児童デイサービス</span>
+                          <p class="name__main">アップル</p>
+                        </div>
+                        <div class="list-holder">
+                          <dl class="list">
+                            <dt class="term">従業員数</dt>
+                            <dd class="desc">10名（送迎は地域により可能です）</dd>
+                          </dl>
+                          <dl class="list">
+                            <dt class="term">所在地</dt>
+                            <dd class="desc">〒543-0073<br>
+                              大阪市天王寺区生玉寺町4-35（<a class="gMap_link" href="https://goo.gl/maps/Mo7FP9BkK3jNs8a77" target="_blank">Google Map</a>）</dd>
+                          </dl>
+                          <dl class="list">
+                            <dt class="term">TEL</dt>
+                            <dd class="desc">06-6772-8377</dd>
+                          </dl>
+                        </div>
+                      </div>
+                      <div class="map-holder">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5519.134055500758!2d135.51007135269495!3d34.662360802489445!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6000e75b216f49bb%3A0x13ed09dbf686ec59!2z44CSNTQzLTAwNzMg5aSn6Ziq5bqc5aSn6Ziq5biC5aSp546L5a-65Yy655Sf546J5a-655S677yU4oiS77yT77yV!5e0!3m2!1sja!2sjp!4v1649228367742!5m2!1sja!2sjp" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                      </div>
+                    </li>
+                    <li class="outline__list__item">
+                      <div class="txt-holder">
+                        <div class="name">
+                          <span class="name__sub">放課後等デイサービス・児童発達支援</span>
+                          <p class="name__main">アップル上汐</p>
+                        </div>
+                        <div class="list-holder">
+                          <dl class="list">
+                            <dt class="term">従業員数</dt>
+                            <dd class="desc">10名（送迎は地域により可能です）</dd>
+                          </dl>
+                          <dl class="list">
+                            <dt class="term">所在地</dt>
+                            <dd class="desc">〒542-0064<br>
+                              大阪市中央区上汐1丁目4番6号　冨士ビル6Ｆ（<a class="gMap_link" href="https://goo.gl/maps/5Xj9cqqMWc2mYr8A6" target="_blank">Google Map</a>）</dd>
+                          </dl>
+                          <dl class="list">
+                            <dt class="term">TEL</dt>
+                            <dd class="desc">06-6762-7612</dd>
+                          </dl>
+                        </div>
+                      </div>
+                      <div class="map-holder">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d205.08813142913596!2d135.51753568687857!3d34.66959773798845!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6000e748d27c5831%3A0x85bcf8ecbde9ce6d!2z44CSNTQyLTAwNjQg5aSn6Ziq5bqc5aSn6Ziq5biC5Lit5aSu5Yy65LiK5rGQ77yR5LiB55uu77yU4oiS77yWIOWGqOWjq-ODk-ODqyA2Zg!5e0!3m2!1sja!2sjp!4v1649228480983!5m2!1sja!2sjp" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </section>
 
           </div>
         </div>
@@ -356,7 +608,7 @@
                   <a class="link" href="facility_l.htm">事業所案内</a>
                 </li>
                 <li class="pages__list__item">
-                  <a class="link" href="service.htm">放課後等デイサービス</a>
+                  <a class="link" href="daycare.htm">放課後等デイサービス</a>
                 </li>
                 <li class="pages__list__item">
                   <a class="link" href="data.htm">データで見るアリスタッチ</a>
