--- a/index.htm
+++ b/index.htm
@@ -83,7 +83,7 @@
               <a class="link" href="facility_l.htm">事業所案内</a>
             </li>
             <li class="nav__list__item">
-              <a class="link" href="service.htm">放課後等デイサービス</a>
+              <a class="link" href="daycare.htm">放課後等デイサービス</a>
             </li>
             <li class="nav__list__item">
               <a class="link" href="data.htm">データで見るアリスタッチ</a>
@@ -128,7 +128,7 @@
                 <a class="link" href="facility_l.htm">事業所案内</a>
               </li>
               <li class="pages__list__item">
-                <a class="link" href="service.htm">放課後等デイサービス</a>
+                <a class="link" href="daycare.htm">放課後等デイサービス</a>
               </li>
               <li class="pages__list__item">
                 <a class="link" href="data.htm">データで見るアリスタッチ</a>
@@ -415,7 +415,7 @@
             <div class="contents">
               <ul class="contents__list">
                 <li class="contents__list__item anime">
-                  <a class="link" href="service.htm">
+                  <a class="link" href="daycare.htm">
                     <div class="visual">
                       <span class="img-box">
                         <img class="ofi" src="img/index/service.jpg" alt="イメージ">
@@ -549,7 +549,7 @@
                 <a class="link" href="facility_l.htm">事業所案内</a>
               </li>
               <li class="pages__list__item">
-                <a class="link" href="service.htm">放課後等デイサービス</a>
+                <a class="link" href="daycare.htm">放課後等デイサービス</a>
               </li>
               <li class="pages__list__item">
                 <a class="link" href="data.htm">データで見るアリスタッチ</a>
