--- a/information_l.htm
+++ b/information_l.htm
@@ -88,7 +88,7 @@
                 <a class="link" href="facility_l.htm">事業所案内</a>
               </li>
               <li class="nav__list__item">
-                <a class="link" href="service.htm">放課後等デイサービス</a>
+                <a class="link" href="daycare.htm">放課後等デイサービス</a>
               </li>
               <li class="nav__list__item">
                 <a class="link" href="data.htm">データで見るアリスタッチ</a>
@@ -134,7 +134,7 @@
                   <a class="link" href="facility_l.htm">事業所案内</a>
                 </li>
                 <li class="pages__list__item">
-                  <a class="link" href="service.htm">放課後等デイサービス</a>
+                  <a class="link" href="daycare.htm">放課後等デイサービス</a>
                 </li>
                 <li class="pages__list__item">
                   <a class="link" href="data.htm">データで見るアリスタッチ</a>
@@ -449,7 +449,7 @@
                   <a class="link" href="facility_l.htm">事業所案内</a>
                 </li>
                 <li class="pages__list__item">
-                  <a class="link" href="service.htm">放課後等デイサービス</a>
+                  <a class="link" href="daycare.htm">放課後等デイサービス</a>
                 </li>
                 <li class="pages__list__item">
                   <a class="link" href="data.htm">データで見るアリスタッチ</a>
