--- a/facility_d.htm
+++ b/facility_d.htm
@@ -87,7 +87,7 @@
                 <a class="link" href="facility_l.htm">事業所案内</a>
               </li>
               <li class="nav__list__item">
-                <a class="link" href="service.htm">放課後等デイサービス</a>
+                <a class="link" href="daycare.htm">放課後等デイサービス</a>
               </li>
               <li class="nav__list__item">
                 <a class="link" href="data.htm">データで見るアリスタッチ</a>
@@ -133,7 +133,7 @@
                   <a class="link" href="facility_l.htm">事業所案内</a>
                 </li>
                 <li class="pages__list__item">
-                  <a class="link" href="service.htm">放課後等デイサービス</a>
+                  <a class="link" href="daycare.htm">放課後等デイサービス</a>
                 </li>
                 <li class="pages__list__item">
                   <a class="link" href="data.htm">データで見るアリスタッチ</a>
@@ -532,7 +532,7 @@
                   <a class="link" href="facility_l.htm">事業所案内</a>
                 </li>
                 <li class="pages__list__item">
-                  <a class="link" href="service.htm">放課後等デイサービス</a>
+                  <a class="link" href="daycare.htm">放課後等デイサービス</a>
                 </li>
                 <li class="pages__list__item">
                   <a class="link" href="data.htm">データで見るアリスタッチ</a>
