--- a/facility_d.htm
+++ b/facility_d.htm
@@ -385,7 +385,7 @@
 
               <div class="btn-box anime -slideIn-b-40">
                 <div class="arrow-btn">
-                  <a class="link -reverse" href="interview_l.htm">一覧へ戻る</a>
+                  <a class="link -reverse" href="facility_l.htm">一覧へ戻る</a>
                 </div>
               </div>
 
