--- a/daycare.htm
+++ b/daycare.htm
@@ -452,7 +452,7 @@
                           <dl class="list">
                             <dt class="term">所在地</dt>
                             <dd class="desc">〒542-0064<br>
-                              大阪市中央区上汐1丁目4番6号　冨士ビル6Ｆ（<a class="gMap_link" href="https://goo.gl/maps/5Xj9cqqMWc2mYr8A6" target="_blank">Google Map</a>）</dd>
+                              大阪市中央区上汐1丁目4番6号　冨士ビル6Ｆ<br>（<a class="gMap_link" href="https://goo.gl/maps/5Xj9cqqMWc2mYr8A6" target="_blank">Google Map</a>）</dd>
                           </dl>
                           <dl class="list">
                             <dt class="term">TEL</dt>
