--- a/facility_l.htm
+++ b/facility_l.htm
@@ -96,7 +96,7 @@
                 <a class="link" href="interview_l.htm">インタビュー</a>
               </li>
               <li class="nav__list__item">
-                <a class="link" href="company.htm">会社案内</a>
+                <a class="link" href="about.htm">会社案内</a>
               </li>
             </ul>
             <div class="nav__recruit">
@@ -142,7 +142,7 @@
                   <a class="link" href="interview_l.htm">インタビュー</a>
                 </li>
                 <li class="pages__list__item">
-                  <a class="link" href="company.htm">会社案内</a>
+                  <a class="link" href="about.htm">会社案内</a>
                 </li>
               </ul>
             </nav>
@@ -428,7 +428,7 @@
                   <a class="link" href="interview_l.htm">インタビュー</a>
                 </li>
                 <li class="pages__list__item">
-                  <a class="link" href="company.htm">会社案内</a>
+                  <a class="link" href="about.htm">会社案内</a>
                 </li>
                 <li class="pages__list__item">
                   <a class="link" href="kyujin_l.htm">採用情報</a>
