--- a/index.htm
+++ b/index.htm
@@ -92,7 +92,7 @@
               <a class="link" href="interview_l.htm">インタビュー</a>
             </li>
             <li class="nav__list__item">
-              <a class="link" href="company.htm">会社案内</a>
+              <a class="link" href="about.htm">会社案内</a>
             </li>
           </ul>
           <div class="nav__recruit">
@@ -137,7 +137,7 @@
                 <a class="link" href="interview_l.htm">インタビュー</a>
               </li>
               <li class="pages__list__item">
-                <a class="link" href="company.htm">会社案内</a>
+                <a class="link" href="about.htm">会社案内</a>
               </li>
             </ul>
           </nav>
@@ -239,7 +239,7 @@
             <div class="links">
               <!-- Link: Comnapy -->
               <div class="links__item anime">
-                <a class="link" href="company.htm">
+                <a class="link" href="about.htm">
                   <div class="link__wrap">
                     <div class="visual">
                       <span class="img-box">
@@ -254,7 +254,7 @@
               </div>
               <!-- Link: Data -->
               <div class="links__item anime">
-                <a class="link" href="company.htm">
+                <a class="link" href="about.htm">
                   <div class="link__wrap">
                     <div class="visual">
                       <span class="img-box">
@@ -558,7 +558,7 @@
                 <a class="link" href="interview_l.htm">インタビュー</a>
               </li>
               <li class="pages__list__item">
-                <a class="link" href="company.htm">会社案内</a>
+                <a class="link" href="about.htm">会社案内</a>
               </li>
               <li class="pages__list__item">
                 <a class="link" href="kyujin_l.htm">採用情報</a>
