--- a/daycare.htm
+++ b/daycare.htm
@@ -96,7 +96,7 @@
                 <a class="link" href="interview_l.htm">インタビュー</a>
               </li>
               <li class="nav__list__item">
-                <a class="link" href="company.htm">会社案内</a>
+                <a class="link" href="about.htm">会社案内</a>
               </li>
             </ul>
             <div class="nav__recruit">
@@ -142,7 +142,7 @@
                   <a class="link" href="interview_l.htm">インタビュー</a>
                 </li>
                 <li class="pages__list__item">
-                  <a class="link" href="company.htm">会社案内</a>
+                  <a class="link" href="about.htm">会社案内</a>
                 </li>
               </ul>
             </nav>
@@ -233,17 +233,22 @@
                 </div>
                 <div class="about__body">
                   <div class="img-holder">
-                    <div class="img img-01">
+                    <div class="img img-01 anime">
                       <img src="img/daycare/input/about01.jpg" alt="イメージ" class="ofi" loading="lazy">
                     </div>
-                    <div class="img img-02">
+                    <div class="img img-02 anime">
                       <img src="img/daycare/input/about02.jpg" alt="イメージ" class="ofi" loading="lazy">
                     </div>
-                    <div class="img img-03">
+                    <div class="img img-03 anime">
                       <img src="img/daycare/input/about03.jpg" alt="イメージ" class="ofi" loading="lazy">
                     </div>
+                    <div class="bubble02">
+                      <span class="img-box">
+                        <img class="ofi" src="img/common/i_bubble.png" alt="装飾">
+                      </span>
+                    </div>
                   </div>
-                  <div class="txt-holder">
+                  <div class="txt-holder anime -slideIn-b-40">
                     <p class="description">
                       放課後等デイサービスは、児童福祉法を根拠にした福祉サービスで、発達のゆるやかな就学児童を対象に療育や居場所づくりを行います。私たちアリスタッチグループは「アップル」と「アップル上汐」という2つの事業所で放課後等デイサービスを提供。放課後や夏休み等の長期休暇中の個別療育や集団活動を通して心身における生活能力を育成し、子どもたちが「ありのままの自分」に自信を持てるようにサポートします。
                     </p>
@@ -263,7 +268,7 @@
                 </div>
                 <div class="feature__body">
                   <ul class="feature__list">
-                    <li class="feature__list__item">
+                    <li class="feature__list__item anime -slideIn-b-40">
                       <div class="img-holder">
                         <div class="img">
                           <img src="img/daycare/input/feature01.jpg" alt="イメージ" class="ofi" loading="lazy">
@@ -281,7 +286,7 @@
                         </div>
                       </div>
                     </li>
-                    <li class="feature__list__item">
+                    <li class="feature__list__item anime -slideIn-b-40">
                       <div class="img-holder">
                         <div class="img">
                           <img src="img/daycare/input/feature02.jpg" alt="イメージ" class="ofi" loading="lazy">
@@ -300,7 +305,7 @@
                         </div>
                       </div>
                     </li>
-                    <li class="feature__list__item">
+                    <li class="feature__list__item anime -slideIn-b-40">
                       <div class="img-holder">
                         <div class="img">
                           <img src="img/daycare/input/feature03.jpg" alt="イメージ" class="ofi" loading="lazy">
@@ -318,7 +323,7 @@
                         </div>
                       </div>
                     </li>
-                    <li class="feature__list__item">
+                    <li class="feature__list__item anime -slideIn-b-40">
                       <div class="img-holder">
                         <div class="img">
                           <img src="img/daycare/input/feature04.jpg" alt="イメージ" class="ofi" loading="lazy">
@@ -346,11 +351,11 @@
               <div class="assessment">
                 <div class="assessment__head">
                   <div class="sec-ttl01 -center -firstLetterBlue">
-                    <span class="en split anime -for-boundIn-b-40">SELF-ASSESSMENT</span>
+                    <span class="en split anime -for-boundIn-b-40">SELF<br class="u-spOnly"><span class="u-pcOnly">-</span>ASSESSMENT</span>
                     <h2 class="ja split anime -for-boundIn-b-40">自己評価</h2>
                   </div>
                 </div>
-                <div class="assessment__body">
+                <div class="assessment__body anime -slideIn-b-40">
                   <div class="assessment__body__inner">
                     <dl class="assessment__list">
                       <dt class="term">
@@ -412,7 +417,7 @@
                 </div>
                 <div class="outline__body">
                   <ul class="outline__list">
-                    <li class="outline__list__item">
+                    <li class="outline__list__item anime -slideIn-b-40">
                       <div class="txt-holder">
                         <div class="name">
                           <span class="name__sub">児童デイサービス</span>
@@ -438,7 +443,7 @@
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5519.134055500758!2d135.51007135269495!3d34.662360802489445!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6000e75b216f49bb%3A0x13ed09dbf686ec59!2z44CSNTQzLTAwNzMg5aSn6Ziq5bqc5aSn6Ziq5biC5aSp546L5a-65Yy655Sf546J5a-655S677yU4oiS77yT77yV!5e0!3m2!1sja!2sjp!4v1649228367742!5m2!1sja!2sjp" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                       </div>
                     </li>
-                    <li class="outline__list__item">
+                    <li class="outline__list__item anime -slideIn-b-40">
                       <div class="txt-holder">
                         <div class="name">
                           <span class="name__sub">放課後等デイサービス・児童発達支援</span>
@@ -452,7 +457,7 @@
                           <dl class="list">
                             <dt class="term">所在地</dt>
                             <dd class="desc">〒542-0064<br>
-                              大阪市中央区上汐1丁目4番6号　冨士ビル6Ｆ<br>（<a class="gMap_link" href="https://goo.gl/maps/5Xj9cqqMWc2mYr8A6" target="_blank">Google Map</a>）</dd>
+                              大阪市中央区上汐1丁目4番6号　冨士ビル6Ｆ<br class="u-pcOnly">（<a class="gMap_link" href="https://goo.gl/maps/5Xj9cqqMWc2mYr8A6" target="_blank">Google Map</a>）</dd>
                           </dl>
                           <dl class="list">
                             <dt class="term">TEL</dt>
@@ -617,7 +622,7 @@
                   <a class="link" href="interview_l.htm">インタビュー</a>
                 </li>
                 <li class="pages__list__item">
-                  <a class="link" href="company.htm">会社案内</a>
+                  <a class="link" href="about.htm">会社案内</a>
                 </li>
                 <li class="pages__list__item">
                   <a class="link" href="kyujin_l.htm">採用情報</a>
@@ -646,5 +651,6 @@
     <!-- プラグイン -->
     <!-- 固有 -->
     <script src="js/script.js"></script>
+    <script src="js/daycare.js"></script>
   </body>
 </html>
