--- a/information_d.htm
+++ b/information_d.htm
@@ -97,7 +97,7 @@
                 <a class="link" href="interview_l.htm">インタビュー</a>
               </li>
               <li class="nav__list__item">
-                <a class="link" href="company.htm">会社案内</a>
+                <a class="link" href="about.htm">会社案内</a>
               </li>
             </ul>
             <div class="nav__recruit">
@@ -143,7 +143,7 @@
                   <a class="link" href="interview_l.htm">インタビュー</a>
                 </li>
                 <li class="pages__list__item">
-                  <a class="link" href="company.htm">会社案内</a>
+                  <a class="link" href="about.htm">会社案内</a>
                 </li>
               </ul>
             </nav>
@@ -422,7 +422,7 @@
                   <a class="link" href="interview_l.htm">インタビュー</a>
                 </li>
                 <li class="pages__list__item">
-                  <a class="link" href="company.htm">会社案内</a>
+                  <a class="link" href="about.htm">会社案内</a>
                 </li>
                 <li class="pages__list__item">
                   <a class="link" href="kyujin_l.htm">採用情報</a>
